# gweni

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vsbuild.bat
cmake/: Config.cmake  gweni_config.h.in
cmake/Hunter/: HunterGate.cmake
docs/: layout.md
examples/: CMakeLists.txt  exampleCommon.cpp  exampleCommon.h  glfw_openglcore.cpp
examples/demo/: button.cpp  button.h  checkBox.cpp  checkbox.cpp  checkbox.h  collapsibleList.cpp  collapsibleList.h  colorPicker.cpp  colorPicker.h  comboBox.cpp  comboBox.h  crossSplitter.cpp  crossSplitter.h  demo.cpp  demo.h  groupBox.cpp  groupBox.h  imagePanel.cpp  imagePanel.h  label.cpp  label.h  labelMultiline.cpp  labelMultiline.h  layoutDemo.cpp  layoutDemo.h  listBox.cpp  listBox.h  menuStrip.cpp  menuStrip.h  numeric.cpp  numeric.h  pageControl.cpp  pageControl.h  progressBar.cpp  progressBar.h  properties.cpp  properties.h  radioButton.cpp  radioButton.h  scrollControl.cpp  (+13 more)
examples/openglcore/: CMakeLists.txt  openglcore.cpp
include/gweni/: align.h  anim.h  config.h  controlList.h  controls.h  dragAndDrop.h  events.h  export.h  gweni.h  hook.h  inputHandler.h  objectIdBank.h  primitiveIds.h  skin.h  toolTip.h  uiTypes.h  userData.h  utility.h
include/gweni/controls/: base.h  button.h  canvas.h  checkBox.h  collapsibleCategory.h  collapsibleList.h  colorControls.h  colorPicker.h  comboBox.h  container.h  crossSplitter.h  dockBase.h  dockedTabControl.h  dragger.h  fieldLabel.h  filePicker.h  folderPicker.h  groupBox.h  highlight.h  horizontalScrollBar.h  horizontalSlider.h  hsvColorPicker.h  imagePanel.h  label.h  labelClickable.h  listBox.h  menu.h  menuItem.h  menuStrip.h  modal.h  numericUpDown.h  pageControl.h  progressBar.h  properties.h  propertytree.h  radioButton.h  radioButtonController.h  rectangle.h  resizableControl.h  resizer.h  (+23 more)
include/gweni/controls/dialogs/: fileOpen.h  fileSave.h  folderOpen.h  query.h
include/gweni/controls/layout/: layout.h  position.h  table.h  tile.h
include/gweni/controls/property/: baseProperty.h  checkBox.h  colorSelector.h  comboBox.h  file.h  folder.h  text.h
include/gweni/skins/: simple.h  texturedControls.h  texturedPrimitives.h  texturedSkin.h
include/gweni/skins/simple/: simple.h
include/gweni/skins/textured/: texturedControls.h  texturedPrimitives.h  texturedSkin.h
include/gweni/utils/: filesystem.h  json.h
lib/Debug/: OpenGLCore.exp
lib/Release/: OpenGLCore.exp
resources/: DefaultSkin.json
samples/: CMakeLists.txt
samples/OpenGL/: OpenGLSample.cpp
samples/OpenGLCore/: OpenGLCoreSample.cpp
source/: anim.cpp  controlList.cpp  dragAndDrop.cpp  events.cpp  gweni.cpp  hook.cpp  inputHandler.cpp  primitiveIds.cpp  skin.cpp  toolTip.cpp  utility.cpp
source/controls/: base.cpp  button.cpp  canvas.cpp  checkBox.cpp  collapsibleCategory.cpp  colorControls.cpp  colorPicker.cpp  comboBox.cpp  crossSplitter.cpp  dockBase.cpp  dockedTabControl.cpp  dragger.cpp  groupBox.cpp  horizontalScrollBar.cpp  horizontalSlider.cpp  hsvColorPicker.cpp  imagePanel.cpp  label.cpp  labelClickable.cpp  listBox.cpp  menu.cpp  menuItem.cpp  menuStrip.cpp  numericUpDown.cpp  pageControl.cpp  progressBar.cpp  properties.cpp  propertyTree.cpp  radioButton.cpp  radioButtonController.cpp  rectangle.cpp  resizableControl.cpp  resizer.cpp  richLabel.cpp  scrollBar.cpp  scrollBarBar.cpp  scrollBarButton.cpp  scrollControl.cpp  slider.cpp  splitterBar.cpp  (+12 more)
source/controls/dialog/: fileOpen.cpp  fileSave.cpp  folderOpen.cpp  query.cpp
source/controls/layout/: layout.cpp
source/platform/include/gwen/: Version.h
source/skins/: texturedControls.cpp  texturedPrimitives.cpp  texturedSkin.cpp
source/skins/textured/: texturedControls.cpp  texturedPrimitives.cpp  texturedSkin.cpp
